--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@types/mocha": "^2.2.42",
     "@types/node": "^7.0.43",
+    "@types/pify": "^3.0.2",
     "prettier": "^1.13.7",
     "tslint": "^5.8.0",
     "typescript": "^2.6.1",
@@ -64,6 +65,7 @@
   },
   "dependencies": {
     "dicom-data-dictionary": "^0.3.1",
-    "dicom-parser": "^1.8.1"
+    "dicom-parser": "^1.8.1",
+    "pify": "^3.0.0"
   }
 }
