--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "engines": {
     "vscode": "^1.24.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/smikitky/vscode-dicom-dump"
+  },
   "categories": [
     "Other"
   ],
