--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "engines": {
     "vscode": "^1.24.0"
   },
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/smikitky/vscode-dicom-dump"
