--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "type": "git",
     "url": "https://github.com/smikitky/vscode-dicom-dump"
   },
+  "bugs": {
+    "url": "https://github.com/smikitky/vscode-dicom-dump/issues"
+  },
   "categories": [
     "Other"
   ],
