Install iconv-lite and improve createEncConverter

--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
   "dependencies": {
     "dicom-data-dictionary": "^0.3.1",
     "dicom-parser": "^1.8.1",
+    "iconv-lite": "^0.4.23",
     "jconv": "^0.1.5",
     "pify": "^3.0.0"
   }
