--- a/package.json
+++ b/package.json
@@ -143,18 +143,17 @@
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "npm run compile && node ./node_modules/vscode/bin/test"
+    "watch": "tsc -watch -p ./"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.42",
     "@types/node": "^7.0.43",
     "@types/pify": "^3.0.2",
+    "@types/vscode": "^1.46.0",
     "prettier": "^1.13.7",
     "tslint": "^5.8.0",
-    "typescript": "^2.6.1",
-    "vscode": "^1.1.6"
+    "typescript": "^3.9.5",
+    "vscode-test": "^1.4.0"
   },
   "prettier": {
     "singleQuote": true
