--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "version": "1.2.1",
   "publisher": "smikitky",
   "engines": {
-    "vscode": "^1.24.0"
+    "vscode": "^1.46.0"
   },
   "license": "MIT",
   "repository": {
@@ -143,15 +143,22 @@
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./"
+    "lint": "eslint \"src/**/*.ts\"",
+    "watch": "tsc -watch -p ./",
+    "test": "tsc -p ./ && mocha --ui tdd out/test/encConverter.test.js"
   },
   "devDependencies": {
-    "@types/mocha": "^2.2.42",
-    "@types/node": "^7.0.43",
+    "@types/glob": "^7.1.2",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^14.0.13",
     "@types/pify": "^3.0.2",
     "@types/vscode": "^1.46.0",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/parser": "^3.3.0",
+    "eslint": "^7.3.0",
+    "glob": "^7.1.6",
+    "mocha": "^8.0.1",
     "prettier": "^2.0.5",
-    "tslint": "^5.8.0",
     "typescript": "^3.9.5",
     "vscode-test": "^1.4.0"
   },
