--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "@types/mocha": "^7.0.2",
     "@types/node": "^14.0.13",
     "@types/pify": "^3.0.2",
+    "@types/qs": "^6.9.3",
     "@types/vscode": "^1.46.0",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
@@ -172,6 +173,6 @@
     "dicom-parser": "^1.8.1",
     "iconv-lite": "^0.4.23",
     "jconv": "^0.1.5",
-    "pify": "^3.0.0"
+    "qs": "^6.9.4"
   }
 }
