--- a/package.json
+++ b/package.json
@@ -145,10 +145,10 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "tsc -p ./",
-    "compile": "tsc -p ./",
+    "vscode:prepublish": "webpack --mode production",
+    "compile": "webpack --mode development",
     "lint": "eslint \"src/**/*.ts\"",
-    "watch": "tsc -watch -p ./",
+    "watch": "webpack --mode development",
     "test": "tsc -p ./ && mocha --ui tdd out/test/encConverter.test.js"
   },
   "devDependencies": {
@@ -164,8 +164,11 @@
     "glob": "^7.1.6",
     "mocha": "^8.0.1",
     "prettier": "^2.0.5",
+    "ts-loader": "^7.0.5",
     "typescript": "^3.9.5",
-    "vscode-test": "^1.4.0"
+    "vscode-test": "^1.4.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "prettier": {
     "singleQuote": true,
