--- a/.vscodeignore
+++ b/.vscodeignore
@@ -3,9 +3,9 @@
 out/test/**
 out/**/*.map
 src/**
+node_modules
 .gitignore
 tsconfig.json
 vsc-extension-quickstart.md
 .eslintrc.yaml
-*.pdf
-doc/*.png
+webpack.config.js
